Add integration test for @Startup with @EJB This should prevent mistakes like https://github.com/omnifaces/omnifaces/commit/46ea477

--- a/src/test/resources/org.omnifaces.test.cdi.eager/EagerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.cdi.eager/EagerIT.xhtml
@@ -38,5 +38,7 @@
 
 		<div id="lazyRequestScopedBean">#{eagerITLazyRequestScopedBean.initTime}</div>
 		<div id="eagerRequestScopedBean">#{eagerITEagerRequestScopedBean.initTime}</div>
+		
+		<div id="ejbInjectedInStartupBean">#{eagerITStartupBean.ejbInjectedInStartupBean}</div>
 	</h:body>
 </html>
