--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
@@ -95,5 +95,20 @@
 				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
 				copier="org.omnifaces.test.taghandler.validatebean.ValidateBeanITEntityCopier" />
 		</h:form>
+
+		<h:form id="validateClassLevelWithMessage">
+			<h:inputText id="number1" value="#{validateBeanITClassLevelBean.entity.number1}" />
+			<h:message id="number1Message" for="number1" />
+			<h:inputText id="number2" value="#{validateBeanITClassLevelBean.entity.number2}" />
+			<h:message id="number2Message" for="number2" />
+
+			<h:commandButton id="command" action="#{validateBeanITClassLevelBean.action}">
+				<f:ajax execute="@form" render="number1Message number2Message" />
+			</h:commandButton>
+
+			<o:validateBean value="#{validateBeanITClassLevelBean.entity}"
+				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
+				showMessageFor="@all" />
+		</h:form>
 	</h:body>
 </html>
