--- a/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.validatebean/ValidateBeanIT.xhtml
@@ -96,7 +96,22 @@
 				copier="org.omnifaces.test.taghandler.validatebean.ValidateBeanITEntityCopier" />
 		</h:form>
 
-		<h:form id="validateClassLevelWithMessage">
+		<h:form id="validateClassLevelWithMessageForForm">
+			<h:inputText id="number1" value="#{validateBeanITClassLevelBean.entity.number1}" />
+			<h:inputText id="number2" value="#{validateBeanITClassLevelBean.entity.number2}" />
+
+			<h:commandButton id="command" action="#{validateBeanITClassLevelBean.action}">
+				<f:ajax execute="@form" render="formMessage" />
+			</h:commandButton>
+
+			<h:message id="formMessage" for="validateClassLevelWithMessageForForm" />
+
+			<o:validateBean value="#{validateBeanITClassLevelBean.entity}"
+				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
+				showMessageFor="@form" />
+		</h:form>
+
+		<h:form id="validateClassLevelWithMessageForAll">
 			<h:inputText id="number1" value="#{validateBeanITClassLevelBean.entity.number1}" />
 			<h:message id="number1Message" for="number1" />
 			<h:inputText id="number2" value="#{validateBeanITClassLevelBean.entity.number2}" />
@@ -109,6 +124,38 @@
 			<o:validateBean value="#{validateBeanITClassLevelBean.entity}"
 				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
 				showMessageFor="@all" />
+		</h:form>
+
+		<h:form id="validateClassLevelWithMessageForGlobal">
+			<h:inputText id="number1" value="#{validateBeanITClassLevelBean.entity.number1}" />
+			<h:inputText id="number2" value="#{validateBeanITClassLevelBean.entity.number2}" />
+
+			<h:commandButton id="command" action="#{validateBeanITClassLevelBean.action}">
+				<f:ajax execute="@form" render="globalMessage" />
+			</h:commandButton>
+
+			<h:messages id="globalMessage" globalOnly="true" />
+
+			<o:validateBean value="#{validateBeanITClassLevelBean.entity}"
+				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
+				showMessageFor="@global" />
+		</h:form>
+
+		<h:form id="validateClassLevelWithMessageForViolating">
+			<h:inputText id="number1" value="#{validateBeanITClassLevelBean.entity.number1}" />
+			<h:message id="number1Message" for="number1" />
+			<h:inputText id="number2" value="#{validateBeanITClassLevelBean.entity.number2}" />
+			<h:message id="number2Message" for="number2" />
+
+			<h:message id="formMessage" for="validateClassLevelWithMessageForViolating" />
+
+			<h:commandButton id="command" action="#{validateBeanITClassLevelBean.action}">
+				<f:ajax execute="@form" render="number1Message number2Message" />
+			</h:commandButton>
+
+			<o:validateBean value="#{validateBeanITClassLevelBean.entity}"
+				validationGroups="org.omnifaces.test.taghandler.validatebean.ValidateBeanITValidationGroup"
+				showMessageFor="@violating" />
 		</h:form>
 	</h:body>
 </html>
