#394: replace all h:form by o:form so it's implicitly covered in IT

--- a/src/test/resources/org.omnifaces.test.cdi.viewscoped/ViewScopedIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.cdi.viewscoped/ViewScopedIT.xhtml
@@ -32,16 +32,16 @@
 		<h:button id="unload" />
 		<h:link id="newtab" target="_blank" />
 
-		<h:form id="non-ajax">
+		<o:form id="non-ajax">
 			<h:commandButton id="submit" action="#{viewScopedITBean.submit}" />
 			<h:commandLink id="navigate" action="#{viewScopedITBean.navigate}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="ajax">
+		<o:form id="ajax">
 			<f:ajax render=":results">
 				<h:commandButton id="submit" action="#{viewScopedITBean.submit}" />
 				<h:commandLink id="navigate" action="#{viewScopedITBean.navigate}" />
 			</f:ajax>
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
