--- a/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/FacesViewsITOtherPage.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.extensionlessurls/FacesViewsITOtherPage.xhtml
@@ -29,8 +29,8 @@
 		<h:link id="linkWithExtensionOutcome" outcome="FacesViewsITOtherPage.xhtml" />
 		<h:link id="linkWithExtensionlessOutcome" outcome="FacesViewsITOtherPage" />
 
-		<h:form id="form">
+		<o:form id="form">
 			<h:commandButton id="submit" />
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
