--- a/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsIT.xhtml
@@ -29,8 +29,8 @@
 		<div id="firstPathParamAsString">#{multiViewsITBean.firstPathParamAsString}</div>
 		<div id="secondPathParamAsInteger">#{multiViewsITBean.secondPathParamAsInteger}</div>
 	
-		<h:form id="form">
+		<o:form id="form">
 			<h:commandButton id="submit" />
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
