--- a/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.inputfile/InputFileIT.xhtml
@@ -27,51 +27,51 @@
 	<h:body>
 		<h:messages id="messages" />
 
-		<h:form id="uploadSingle" enctype="multipart/form-data">
+		<o:form id="uploadSingle" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" />
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadSingleAjax" enctype="multipart/form-data">
+		<o:form id="uploadSingleAjax" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" />
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}">
 				<f:ajax execute="@form" render=":messages" />
 			</h:commandButton>
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadSingleAccept" enctype="multipart/form-data">
+		<o:form id="uploadSingleAccept" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				accept="image/*" acceptMessage="{0}: {1} is not {2}" />
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadSingleMaxsizeClient" enctype="multipart/form-data">
+		<o:form id="uploadSingleMaxsizeClient" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				maxsize="10" maxsizeMessage="{0}: {1} larger than {2}" />
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadSingleMaxsizeServer" enctype="multipart/form-data">
+		<o:form id="uploadSingleMaxsizeServer" enctype="multipart/form-data">
 			<o:inputFile id="file" value="#{inputFileITBean.file}" label="label" 
 				maxsize="#{facesContext.currentPhaseId.ordinal ne 6 ? 10 : null}" maxsizeMessage="{0}: {1} larger than {2}" />
 				<!-- Above maxsize value should skip client side validation. -->
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadSingle}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadMultiple" enctype="multipart/form-data">
+		<o:form id="uploadMultiple" enctype="multipart/form-data">
 			<o:inputFile id="file1" value="#{inputFileITBean.files}" multiple="true" />
 			<o:inputFile id="file2" a:name="uploadMultiple:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}" />
-		</h:form>
+		</o:form>
 
-		<h:form id="uploadMultipleAjax" enctype="multipart/form-data">
+		<o:form id="uploadMultipleAjax" enctype="multipart/form-data">
 			<o:inputFile id="file1" value="#{inputFileITBean.files}" multiple="true" />
 			<o:inputFile id="file2" a:name="uploadMultipleAjax:file1" rendered="#{facesContext.currentPhaseId.ordinal eq 6}" />
 			<!-- Above additional input is a work around for Selenium WebDriver API not supporting multi file upload. -->
 			<h:commandButton id="submit" action="#{inputFileITBean.uploadMultiple}">
 				<f:ajax execute="@form" render=":messages" />
 			</h:commandButton>
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
