--- a/src/test/resources/org.omnifaces.test.exceptionhandler.fullajaxexceptionhandler/FullAjaxExceptionHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.exceptionhandler.fullajaxexceptionhandler/FullAjaxExceptionHandlerIT.xhtml
@@ -24,7 +24,7 @@
 	<h:head />
 
 	<h:body>
-		<h:form id="form">
+		<o:form id="form">
 			<h:commandButton id="throwDuringInvokeApplication" action="#{fullAjaxExceptionHandlerITBean.throwDuringInvokeApplication}">
 				<f:ajax />
 			</h:commandButton>
@@ -40,6 +40,6 @@
 			<h:panelGroup id="output">
 				 <h:outputText value="#{fullAjaxExceptionHandlerITBean.throwDuringRenderResponse}" rendered="#{facesContext.postback}" />
 			</h:panelGroup>
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
