Skip SkipValidatorsIT in TomEE as it fails with MyFaces 2.3 (works with MyFaces 2.2). View scope is prematurely ended here. Needs investigation.

--- a/src/test/resources/org.omnifaces.test.taghandler.skipvalidators/SkipValidatorsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.taghandler.skipvalidators/SkipValidatorsIT.xhtml
@@ -29,7 +29,7 @@
 	<h:head />
 	
 	<h:body>
-		<h:form id="form">
+		<o:form id="form">
 			<h:selectBooleanCheckbox id="toggleRequired" value="#{viewScope.required}">
 				<f:ajax execute="@form" render="@form" />
 				<o:skipValidators />
@@ -43,6 +43,6 @@
 			</h:commandButton>
 
 			<h:outputText id="validationFailed" value="#{facesContext.validationFailed}" />
-		</h:form>
+		</o:form>
 	</h:body>
 </html>
