--- a/src/test/resources/org.omnifaces.test.exceptionhandler.fullajaxexceptionhandler/FullAjaxExceptionHandlerIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.exceptionhandler.fullajaxexceptionhandler/FullAjaxExceptionHandlerIT.xhtml
@@ -24,7 +24,7 @@
 	<h:head />
 
 	<h:body>
-		<h:form id="form">
+		<h:form id="form1">
 			<h:commandButton id="throwDuringInvokeApplication" action="#{fullAjaxExceptionHandlerITBean.throwDuringInvokeApplication}">
 				<f:ajax />
 			</h:commandButton>
@@ -40,6 +40,15 @@
 			<h:panelGroup id="output">
 				 <h:outputText value="#{fullAjaxExceptionHandlerITBean.throwDuringRenderResponse}" rendered="#{facesContext.postback}" />
 			</h:panelGroup>
+
+			<h:commandButton id="throwNonAjaxDuringUpdateModelValues" />
+		</h:form>
+		<h:form id="form2">
+			<h:commandButton id="throwNonAjaxDuringInvokeApplication" action="#{fullAjaxExceptionHandlerITBean.throwDuringInvokeApplication}" />
+		</h:form>
+		<h:form id="form3">
+			<h:commandButton id="throwNonAjaxDuringRenderResponse" />
+			<h:outputText value="#{fullAjaxExceptionHandlerITBean.throwDuringRenderResponse}" rendered="#{facesContext.postback}" />
 		</h:form>
 	</h:body>
 </html>
