Improvements after merge from #471 and updated MultiViewsIT

--- a/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.facesviews.multiviews/MultiViewsIT.xhtml
@@ -32,5 +32,10 @@
 		<o:form id="form">
 			<h:commandButton id="submit" />
 		</o:form>
+
+		<h:link id="link" outcome="MultiViewsITOtherPage">
+			<o:pathParam value="pathParam" />
+			<o:pathParam value="471" />
+		</h:link>
 	</h:body>
 </html>
