--- a/src/test/resources/org.omnifaces.test.component.scriptparam/ScriptParamIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.component.scriptparam/ScriptParamIT.xhtml
@@ -31,7 +31,7 @@
 
 	<h:body>
 		<h:outputText id="pageLoadTimestamp" value="#{now.time}" />
-		<h:panelGroup id="scriptLoadTimestamp"><h:outputText value="#{now.time}" rendered="#{not empty scriptParamITBean.clientTimeZoneOffset}" /></h:panelGroup>
+		<h:panelGroup id="scriptLoadTimestamp"><h:outputText value="#{now.time}" rendered="#{scriptParamITBean.postScriptParamInvoked}" /></h:panelGroup>
 		
 		<h:outputText id="clientTimeZoneOffset" value="#{scriptParamITBean.clientTimeZoneOffset}" />
 		<h:outputText id="appName" value="#{scriptParamITBean.navigator.getString('appName')}" />
