#575: update FacesConverterIT to also test resource dependencies and fix failing IT in TomEE, it was failing in MyFaces because of the converters extending from Converter<String> instead of Converter<Object>.

--- a/src/test/resources/org.omnifaces.test.cdi.facesconverter/FacesConverterIT.xhtml
+++ b/src/test/resources/org.omnifaces.test.cdi.facesconverter/FacesConverterIT.xhtml
@@ -26,5 +26,19 @@
 	<h:body>
 		<h:outputText id="facesConverterITConverter" value="test" converter="facesConverterITConverter" />
 		<h:outputText id="facesConverterITManagedConverter" value="test" converter="facesConverterITManagedConverter" />
+		<h:outputText id="facesConverterITExtendedConverter" value="test" converter="facesConverterITExtendedConverter" />
+		<h:outputText id="facesConverterITExtendedManagedConverter" value="test" converter="facesConverterITExtendedManagedConverter" />
+
+		<h:outputText id="facesConverterITConverterResourceDependency" />
+		<h:outputText id="facesConverterITManagedConverterResourceDependency" />
+		<h:outputText id="facesConverterITExtendedConverterResourceDependency" />
+		<h:outputText id="facesConverterITExtendedManagedConverterResourceDependency" />
+
+		<h:outputText id="loaded" />
+
+		<script>
+			// This ensures that any resource dependency scripts are finished because they're also only executed on "load" event.
+			window.addEventListener("load", function() { document.getElementById("loaded").innerHTML = "true" });
+		</script>
 	</h:body>
 </html>
